--- a/package.json
+++ b/package.json
@@ -1,25 +1,34 @@
 {
-  "name": "ts-starter",
+  "name": "stackblitz-mcp",
   "type": "module",
   "version": "0.0.0",
   "packageManager": "pnpm@10.28.1",
-  "description": "My awesome typescript library",
+  "description": "MCP server for reading files from StackBlitz projects",
   "author": "Kevin Deng <sxzz@sxzz.moe>",
   "license": "MIT",
   "funding": "https://github.com/sponsors/sxzz",
-  "homepage": "https://github.com/sxzz/ts-starter#readme",
+  "homepage": "https://github.com/sxzz/stackblitz-mcp#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/sxzz/ts-starter.git"
+    "url": "git+https://github.com/sxzz/stackblitz-mcp.git"
   },
   "bugs": {
-    "url": "https://github.com/sxzz/ts-starter/issues"
+    "url": "https://github.com/sxzz/stackblitz-mcp/issues"
   },
+  "keywords": [
+    "mcp",
+    "model-context-protocol",
+    "stackblitz",
+    "ai",
+    "llm"
+  ],
   "exports": {
-    ".": "./dist/index.js",
+    ".": "./dist/index.mjs",
     "./package.json": "./package.json"
   },
-  "types": "./dist/index.d.ts",
+  "bin": {
+    "stackblitz-mcp": "./dist/index.mjs"
+  },
   "files": [
     "dist"
   ],
@@ -39,6 +48,10 @@
     "format": "prettier --cache --write .",
     "release": "bumpp",
     "prepublishOnly": "pnpm run build"
+  },
+  "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.12.1",
+    "zod": "^3.25.23"
   },
   "devDependencies": {
     "@sxzz/eslint-config": "^7.5.1",
