feat: add website with MCP configuration guide
Add Astro-based static website in pnpm workspace monorepo. Includes:
- Dark-themed homepage documenting stackblitz-mcp MCP server
- Setup instructions for 6 AI tools (Claude Desktop/Code, VS Code, Cursor, Windsurf, JetBrains)
- Complete API documentation with tool parameters and resources
- UnoCSS styling with responsive design and icon support
- Deployment ready for Cloudflare Pages

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,4 +1,5 @@
-packages: []
+packages:
+  - website
 
 allowBuilds:
   esbuild: false
@@ -6,3 +7,4 @@ allowBuilds:
 trustPolicy: no-downgrade
 trustPolicyExclude:
   - chokidar@4.0.3
+  - vite@6.4.1
